--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports:
   dplyr, 
-  gamlss
+  gamlss, 
+  gamlss.dist
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
