--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: SimSST
 Title: Simulated Stop Signal Task Data
-Version: 0.0.2.9
+Version: 0.0.3.0
 Authors@R: c(
     person("Mohsen", "Soltanifar", email="mohsen.soltanifar@mail.utoronto.ca", role = c("aut")), 
     person("Chel Hee", "Lee", email="chelhee.lee@ucalgary.ca", role=c("cre", "aut"))
     )
 Description: Simulate stop signal task data. 
-License: `use_gpl_license()`
+License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
