--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: SimSST
 Title: Simulated Stop Signal Task Data
 Version: 0.0.4
 Authors@R: c(
-    person(first="Mohsen", last="Soltanifar", email="mohsen.soltanifar@alum.utoronto.ca", role = c("aut")), 
-    person(first="Chel Hee", last="Lee", email="chelhee.lee@ucalgary.ca", role=c("cre", "aut"))
+    person(given="Mohsen", family="Soltanifar", email="mohsen.soltanifar@alum.utoronto.ca", role = c("aut")), 
+    person(given="Chel Hee", family="Lee", email="chelhee.lee@ucalgary.ca", role=c("cre", "aut"))
     )
 Description: Simulating stop signal task data. 
 License: GPL-3
