--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SimSST
 Title: Simulated Stop Signal Task Data
-Version: 0.0.5.0
+Version: 0.0.5.1
 Authors@R: c(
     person(given="Mohsen", family="Soltanifar", email="mohsen.soltanifar@alum.utoronto.ca", role = c("aut"), comment=c(ORCID="0000-0002-5989-0082")), 
     person(given="Chel Hee", family="Lee", email="chelhee.lee@ucalgary.ca", role=c("cre", "aut"), comment=c(ORCID="0000-0001-8209-8176"))
@@ -13,6 +13,7 @@ RoxygenNote: 7.1.2
 Imports:
   dplyr, 
   gamlss.dist,
-  MASS
+  MASS,
+  stats
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
